--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -172,7 +172,7 @@
     <Compile Include="MonteCarlo\Detectors\pMCDetectorInputTests.cs" />
     <Compile Include="MonteCarlo\MonteCarloFactoriesTests.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSourceTests.cs" />
+    <Compile Include="MonteCarlo\Sources\CustomPointSourceTests.cs" />
     <Compile Include="MonteCarlo\TallyActions\AnalogTallyActionsTests.cs" />
     <Compile Include="MonteCarlo\TallyActions\pMCTallyActionsTests.cs" />
     <Compile Include="MonteCarlo\TallyActions\DAWTallyActionsTests.cs" />
