Added unit tests for transmittance tallies, changed unit test inputs to thinner slab so transmittance results better, added method in MultiLayerTissueInput to ValidateInput and modified history tallies to account for pseudo-collision.  10 unit tests pass for analog and DAW currently.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -562,6 +562,9 @@
     <Compile Include="..\Vts\MonteCarlo\TallyActions\AOfRhoAndZTally.cs">
       <Link>MonteCarlo\TallyActions\AOfRhoAndZTally.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\TallyActions\ATotalTally.cs">
+      <Link>MonteCarlo\TallyActions\ATotalTally.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeTally.cs">
       <Link>MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeTally.cs</Link>
     </Compile>
