--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -278,6 +278,7 @@
     <Compile Include="MonteCarlo\Sources\SourceBase.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
     <Compile Include="MonteCarlo\TallyActions\AOfRhoAndZTally.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ATotalTally.cs" />
     <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeTally.cs" />
     <Compile Include="MonteCarlo\TallyActions\MomentumTransferOfRhoAndZTally.cs" />
     <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZTally.cs" />
