--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -259,6 +259,9 @@
     <Compile Include="..\Vts\IO\ICustomBinaryWriterOfT.cs">
       <Link>IO\ICustomBinaryWriterOfT.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\IO\LibraryIO.cs">
+      <Link>IO\LibraryIO.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\IO\MetaData.cs">
       <Link>IO\MetaData.cs</Link>
     </Compile>
